// Copyright (C) 2023 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlenvproxyserver;

option go_package = "intermediate/proto";

service ControlEnvProxyService {
  rpc ControlEnvProxy (ControlEnvProxyRequest) returns (ControlEnvProxyReply) {}
}

message ControlEnvProxyRequest {
  string cmd = 1;
  repeated string args = 2;
  repeated string options = 3;
}

message ControlEnvProxyReply {
  string grpc_reply = 1;
}
